Fix jump to the middle of the screen

--- a/src/editor/main.less
+++ b/src/editor/main.less
@@ -664,7 +664,7 @@
 
 .metadata {
     position: absolute;
-    top: 200px;
+    top: 140px;
     width: 98%;
     margin: 0 1%;
     tr th {
@@ -681,7 +681,6 @@
     }
 
     .missing .index {
-        margin: 20px 0;
         background: @pink;
         color: white;
     }
